tests/ui/compile_fail/multiple_unnamed_fields.rs
#[derive(enumorph::Enumorph)]
enum Enum {
    A(u8, u8),
}

fn main() {}
